# TarsFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Changelist.md  Contributing.md  README.md  README.zh.md
.github/workflows/: build-dev-docker.yml  build-docker.yml  build-master-docker.yml  ccpp-linux.yml  ccpp-mac.yml  ccpp-win.yml  ccpp.yml  deploy-docker.yml  deploy-master-docker.yml  nightly-build-framework.yml  nightly-build-tars.yml  nightly-build.yml  test-pull-request.yml  test-push-docker.yml  test-release.yml
AdminRegistryServer/: AdminReapThread.cpp  AdminReapThread.h  AdminRegistryImp.cpp  AdminRegistryImp.h  AdminRegistryServer.cpp  AdminRegistryServer.h  CMakeLists.txt  DbProxy.cpp  DbProxy.h  ExecuteTask.cpp  ExecuteTask.h  NodeManager.cpp  NodeManager.h  util.h
AuthServer/: AuthImp.cpp  AuthImp.h  AuthServer.cpp  AuthServer.h  CMakeLists.txt  main.cpp
ConfigServer/: CMakeLists.txt  ConfigImp.cpp  ConfigImp.h  ConfigServer.cpp  ConfigServer.h  main.cpp
LogServer/: CMakeLists.txt  ESClient.cpp  ESClient.h  ESIndex.h  ESReader.cpp  ESReader.h  ESWriter.cpp  ESWriter.h  Link.cpp  Link.h  LogAggregation.cpp  LogAggregation.h  LogImp.cpp  LogImp.h  LogReader.cpp  LogReader.h  LogServer.cpp  LogServer.h  RawLog.h  SnapshotDraftsman.cpp  SnapshotDraftsman.h  THead.h  TimerTaskQueue.h  Topology.h  Topology.tars  TopologyImp.cpp  TopologyImp.h  TraceData.h  TraceData.tars  TraceService.cpp  TraceService.h  main.cpp
LogServer/rapidjson/doc/: Doxyfile.in  schema.md
NodeServer/: Activator.cpp  Activator.h  BatchPatchThread.cpp  BatchPatchThread.h  CMakeLists.txt  CommandAddFile.cpp  CommandAddFile.h  CommandDestroy.cpp  CommandDestroy.h  CommandLoad.cpp  CommandLoad.h  CommandNotify.cpp  CommandNotify.h  CommandPatch.cpp  CommandPatch.h  CommandStart.cpp  CommandStart.h  CommandStop.cpp  CommandStop.h  DockerPatch.cpp  DockerPatch.h  DockerPullThread.cpp  DockerPullThread.h  DockerServerToolBox.cpp  DockerServerToolBox.h  DockerStart.cpp  DockerStart.h  DockerStop.cpp  DockerStop.h  KeepAliveThread.cpp  KeepAliveThread.h  NodeImp.cpp  NodeImp.h  NodeRollLogger.cpp  NodeRollLogger.h  NodeServer.cpp  NodeServer.h  PlatformInfo.cpp  PlatformInfo.h  PropertyReporter.h  (+23 more)
NotifyServer/: CMakeLists.txt  LoadDbThread.cpp  LoadDbThread.h  NotifyImp.cpp  NotifyImp.h  NotifyServer.cpp  NotifyServer.h  main.cpp
PatchServer/: CMakeLists.txt  Dockerfile  PatchCache.cpp  PatchCache.h  PatchImp.cpp  PatchImp.h  PatchServer.cpp  PatchServer.h  main.cpp
PropertyServer/: CMakeLists.txt  PropertyDbManager.cpp  PropertyDbManager.h  PropertyHashMap.h  PropertyImp.cpp  PropertyImp.h  PropertyReapThread.cpp  PropertyReapThread.h  PropertyServer.cpp  PropertyServer.h  main.cpp
QueryPropertyServer/: CMakeLists.txt  DbProxy.cpp  DbProxy.h  DbThread.h  QueryDbThread.cpp  QueryImp.cpp  QueryImp.h  QueryItem.h  QueryServer.cpp  QueryServer.h
QueryStatServer/: CMakeLists.txt  DbProxy.cpp  DbProxy.h  DbThread.cpp  DbThread.h  QueryDbThread.cpp  QueryImp.cpp  QueryImp.h  QueryItem.h  QueryServer.cpp  QueryServer.h  RequestDecoder.h
RegistryServer/: CMakeLists.txt  CheckNodeThread.cpp  CheckNodeThread.h  CheckSettingState.cpp  CheckSettingState.h  DbHandle.cpp  DbHandle.h  DockerThread.cpp  DockerThread.h  LoadBalanceThread.cpp  LoadBalanceThread.h  NodeManager.cpp  NodeManager.h  QueryImp.cpp  QueryImp.h  ReapThread.cpp  ReapThread.h  RegisterQueryManager.cpp  RegisterQueryManager.h  RegistryImp.cpp  RegistryImp.h  RegistryProcThread.cpp  RegistryProcThread.h  RegistryServer.cpp  RegistryServer.h  main.cpp  util.h
StatServer/: CMakeLists.txt  ReapSSDThread.cpp  ReapSSDThread.h  StatDbManager.cpp  StatDbManager.h  StatHashMap.h  StatImp.cpp  StatImp.h  StatServer.cpp  StatServer.h
TraceServer/: CMakeLists.txt  ESClient.cpp  ESClient.h  ESIndex.h  ESReader.cpp  ESReader.h  ESWriter.cpp  ESWriter.h  InternGraph.h  JsonTr.h  Link.cpp  Link.h  LogAggregation.cpp  LogReader.cpp  LogReader.h  RawLog.h  TimerTaskQueue.h  Topology.h  Topology.tars  TopologyImp.cpp  TopologyImp.h  TraceServer.cpp  TraceServer.h  main.cpp
TraceServer/src/: CMakeLists.txt  ESClient.cpp  ESClient.h  ESReader.cpp  ESWriter.cpp  ESWriter.h  HttpParser.cpp  HttpParser.h  Link.cpp  Link.h  LogAggregation.h  THead.h  TimerTaskQueue.h  TraceServer.cpp  main.cpp
conf/: tars.tarsstat
deploy/: Dockerfile  MariaDB.repo  README.md  README.zh.md  arm64.Dockerfile  arm64.build.Dockerfile  arm64.docker.sh  build.Dockerfile  buildInDocker.sh  centos-install.sh  centos7_base.repo  docker-init.sh  docker.sh  linux-install.sh  tar-server.sh  tars-install.sh  tars-stop.sh  ubuntu-install.sh  uninstall.sh  web-install.sh  windows-install.sh  windows-tars-install.sh  x64.build.Dockerfile
deploy/framework/conf/: tars-stop.bat
deploy/framework/servers/: check.sh  execute.sh  tars-start.sh  tars-stop.sh
deploy/framework/servers-win/: execute.bat  tars-start.bat
deploy/framework/sql/: db_cache_web.sql  db_tars.sql  t_tars_files.sql  tars_node_init.sql  tars_servers.sql  tars_servers_logs.sql  tars_servers_master.sql  tars_upgrade.conf  tars_upgrade.sql
deploy/tarslog/util/: start.sh
deploy/tools/: install-win.sh  install.bat  install.sh
docs/: README.md  tars_config.md  tars_template.md
docs-en/: README.md  tars_config.md  tars_template.md
framework-install/: Dockerfile  README.md  README.zh.md  centos-install.sh  centos7_base.repo  docker-init.sh  docker-install.sh.bak  docker.sh  pip.conf  tars-install.sh  tars.sh
framework-install/deploy/: cleanDeploy.py  comm.properties  deploy.py
mysql-tool/: CMakeLists.txt  main.cpp
objects/: CMakeLists.txt  ObjectsCacheManager.cpp  ObjectsCacheManager.h
patchclient/: CMakeLists.txt  patchclient.cpp  tars_patch.cpp  tars_patch.h
sql/: db_tars.sql  exec-sql.sh  t_tars_files.sql  tarsconfig.sql  tarslog.sql  tarsnotify.sql  tarspatch.sql  tarsproperty.sql  tarsqueryproperty.sql  tarsquerystat.sql  tarsstat.sql  upgrade2IPv6.sh
tars-client/: CMakeLists.txt  TarsClient.cpp  TarsClient.h  main.cpp
tars-client/command/: ping.h  start.h
test/: Dockerfile
(+203 files in other folders)
